clusters/prod/external-servers/pve-1/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve-1-slice
  labels:
    kubernetes.io/service-name: pve-1
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - "192.168.4.86"
    conditions:
      ready: true
