clusters/prod/external-servers/pve-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-1
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
